[project]
name = "fuzzy-goggles"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhishek Saxena",email = "as7122000@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
gymnasium = "^1.1.1"
imageio = "^2.37.0"
stable-baselines3 = {extras = ["extra"], version = "^2.6.0"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
